
   * When two plugins conflict, the source of both the losing and now the
     winning definition is shown.  (Konstantin Mikhaylov, #5454)

   * When committing to a branch, the location being committed to is
     displayed.  (Daniel Watkins, #52479)

   * ``bzr --version`` takes care about encoding of stdout, especially
     when output is redirected. (Alexander Belchenko, #131100)

  IMPROVEMENTS:

   * Add the option "--show-diff" to the commit command in order to display
     the diff during the commit log creation. (Goffredo Baroncelli)

   * ``pull`` and ``merge`` are much faster at installing bundle format 4.
     (Aaron Bentley)

   * ``pull -v`` no longer includes deltas, making it much faster.
     (Aaron Bentley)

   * ``send`` now sends the directive as an attachment by default.
     (Aaron Bentley, Lukáš Lalinský, Alexander Belchenko)

   * Documentation updates (Martin Albisetti)

   * Help on debug flags is now included in ``help global-options``.
     (Daniel Watkins, #124853)

   * Parameters passed on the command line are checked to ensure they are
     supported by the encoding in use. (Daniel Watkins)

   * The compression used within the bzr repository has changed from zlib
     level 9 to the zlib default level. This improves commit performance with
     only a small increase in space used (and in some cases a reduction in
     space). (Robert Collins)

   * Initial commit no longer SHAs files twice and now reuses the path
     rather than looking it up again, making it faster.
     (Ian Clatworthy)

   * New option ``-c``/``--change`` for ``diff`` and ``status`` to show
     changes in one revision.  (Lukáš Lalinský)

   * If versioned files match a given ignore pattern, a warning is now
     given. (Daniel Watkins, #48623)

   * ``bzr status`` now has -S as a short name for --short and -V as a
     short name for --versioned. These have been added to assist users
     migrating from Subversion: ``bzr status -SV`` is now like